@@ -29,7 +29,6 @@ import java.io.Writer;
 import java.net.InetSocketAddress;
 import java.util.Date;
 import java.util.Formatter;
-import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 
@@ -162,18 +161,18 @@ public class BackupBO extends AbstractBO {
 		return this.dao.get(id);
 	}
 
-	public LinkedList<BackupDTO> list() {
+	public List<BackupDTO> list() {
 		return this.dao.list();
 	}
 
 	public BackupDTO getLastBackup() {
-		LinkedList<BackupDTO> list = this.dao.list(1);
+		List<BackupDTO> list = this.dao.list(1);
 
 		if (list.size() == 0) {
 			return null;
 		}
 
-		return list.getFirst();
+		return list.get(0);
 	}
 
 	public boolean save(BackupDTO dto) {
